--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://carterli.dev" />
     <meta property="og:title" content="Carter | Portfolio" />
-    <meta property="og:description" content="Credits to Anil Seervi" />
-    <meta
-      property="og:image"
-      content="https://devfolio.js.org/assets/devfolio.png"
-    />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://carterli.dev" />
     <meta property="twitter:title" content="Carter | Portfolio" />
@@ -380,3 +375,5 @@
     <script type="text/javascript" src="./javascript/valtilt.js"></script>
   </body>
 </html>
+
+<!--Credits to Anil Seervi-->
