--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link rel="icon" type="image/png" href="./assets/carter-logo.png" />
     <meta name="theme-color" content="#2AA670" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://carterli.dev" />
+    <meta property="og:url" content="https://www.carterli.dev" />
     <meta property="og:title" content="Carter | Portfolio" />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://carterli.dev" />
-    <meta property="twitter:title" content="Carter | Portfolio" />
+    <meta property="og:description" content="My Portfolio :)" />
+    <meta
+      property="og:image"
+      content="https://drive.google.com/file/d/1COnZSeKSF3uYrgFA3JF1Nf2dwy9-KxtD/view?usp=sharing"
+    />
     <link rel="stylesheet" href="./css/main.css" />
     <link
       rel="stylesheet"
@@ -375,5 +377,3 @@
     <script type="text/javascript" src="./javascript/valtilt.js"></script>
   </body>
 </html>
-
-<!--Credits to Anil Seervi-->
