--- a/index.html
+++ b/index.html
@@ -312,6 +312,38 @@
               </a>
             </div>
           </article>
+          <article class="row">
+            <div class="project-wrapper__text">
+              <h3 class="project-wrapper__text-title">Technical Communications Projects</h3>
+              <p class="project-wrapper__text-info">
+                A presentation detailing a proposed change to Stony Brook's bike sharing program.
+              </p>
+              <p class="project-wrapper__text-info">
+                Created for my CSE 300 class.
+              </p>
+              <div class="project-wrapper__text-btns">
+                <a
+                  href="https://docs.google.com/presentation/d/18PBAD2cofJCMQ5J3JmfRw_hwoKCS1xGcPBILK0EQaNM/edit?usp=sharing"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="cta-btn cta-btn--hero cta-btn--projects"
+                  >Slides</a
+                >
+              </div>
+            </div>
+
+            <div class="project-wrapper__image">
+              <a>
+                <div class="thumbnail rounded">
+                  <img
+                    src="assets/cse300_proposal.png"
+                    class="img-fluid"
+                    alt="Project Image"
+                  />
+                </div>
+              </a>
+            </div>
+          </article>
         </div>
       </div>
     </section>
